k8s/services/authentik/extra/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-server-as212024
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  ingressClassName: nginx-public
  rules:
    - host: auth.as212024.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
  tls:
    - hosts:
        - auth.as212024.net
      secretName: authentik-as212024-tls
